# pawnstar

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md  attacks.c  bitboard_constants.h  build_cand.sh  clean.bat  command_processor.c  debug_hashtable.c  engine_protocol.html  evaluation.c  evaluation_full.c  evaluation_lazy.c  evaluation_simple.c  forsyth_edwards.c  function_prototypes.h  game.py  game_over_detection.c  generated_data.c  generated_data.cpp  generated_data.h  generated_magics.c  generator.h  inline_functions.h  input_handling.c  macros.h  main.c  main.cpp  make_moves.c  move.h  move_generation.c  move_generator.c  move_generator.h  move_to_string.c  opening_book.c  (+35 more)
.claude/: README.md  settings.json  settings.local.json
.claude/memory/: MEMORY.md  feedback_clang_format.md  feedback_descriptive_names.md  feedback_make_clean.md  feedback_push_to_main.md  feedback_tee_test_output.md  machine-cargo-version-gotcha.md  machine-setup-env.md  machine-windows-native-build.md  project_apple_silicon_port.md  project_deterministic_move_sort.md  project_go_port.md  project_magic_bitboards.md  project_nnue_experiment.md  project_per_thread_history.md  project_search_uninit_ub.md  project_tried_asm_kernels.md  project_tried_hidden_layer.md  project_tried_output_buckets.md  project_tried_pext_direct_lookup.md  project_tried_search_features.md  project_tried_update_prefetch.md  project_windows_port.md
.github/workflows/: ci.yml  release.yml
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_bratko_kopec  test_perft  test_see
build-test/Testing/Temporary/: CTestCostData.txt
cmake/: mingw-clang-toolchain.cmake  run_doxygen.cmake  write_build_number.cmake
doc/: engine_protocol.html  pawnstar.book  pawnstar.book.prev
generate_constants/: generate_constants.c  generate_constants.cpp  generate_constants.vcxproj  generate_constants.vcxproj.filters
include/: attacks.h  bitboard.h  bitboard_constants.h  castling_rights.h  chess_clock.h  color.h  constants.h  debug_hashtable.h  evaluation.h  evaluation_template.h  function_prototypes.h  game.h  generated_data.h  history_table.h  inline_functions.h  macros.h  move.h  move_generation.h  move_generation_template.h  opening_book.h  options.h  pawnstar.h  piece.h  pins.h  position.h  position_move_generation.h  position_stack.h  random.h  search.h  search_state.h  slice_allocator.h  sort_moves.h  square.h  stack_list.h  stack_vector.h  static_exchange_evaluation.h  tests.h  thread_pool.h  timer.h  transposition_table.h  (+1 more)
magic_bitboards/: magic_bitboards.c  magic_bitboards.vcxproj  magic_bitboards.vcxproj.filters
nnue/: README.md  int8_quant_study.md
src/: attacks.c  attacks.cpp  attacks.h  bitboard.c  bitboard.h  castling_rights.c  castling_rights.h  chess_clock.c  chess_clock.h  color.h  constants.h  debug_hashtable.c  debug_hashtable.cpp  debug_hashtable.h  embedded_book.S  embedded_net.S  eval_cache.h  evaluation.c  evaluation.cpp  evaluation.h  evaluation_full.c  forsyth_edwards.c  forsyth_edwards.cpp  game.c  game.cpp  game.h  game_over_detection.c  game_over_detection.cpp  generate_constants.cpp  generated_data.c  generated_data.cpp  generated_data.h  history_table.c  history_table.h  input_handling.c  input_handling.cpp  input_handling.h  main.c  main.cpp  make_moves.c  (+67 more)
test/: bratko_kopec.cpp  bratko_kopec_cases.h  bratko_kopec_nnue.cpp  bratko_kopec_nnue_test.cpp  chess_clock_test.cpp  nnue_incremental.cpp  nnue_incremental_test.cpp  nnue_reference.txt  nnue_test.cpp  opening_book_test.cpp  pawn_structure.cpp  perft.cpp  perft_results.cpp  perft_test.cpp  see.cpp  see_test.cpp  test_report.h  uci_test.sh
tests/: perft_results.c  test_bratko_kopec.c  test_bratko_kopec.cpp  test_perft.c  test_perft.cpp  test_see.c  test_see.cpp
tools/: build_windows.sh  dump_magics.cpp  filter_book.cpp  gen_data.cpp  make_openings.sh  nnue_quant_study.cpp  rate.sh  run_experiment.sh  run_gendata.sh  run_sprt.sh  setup_bullet.sh  stamp_net.cpp  train_pipeline.sh  verify_net.sh
tools/aws/: README.md  bootstrap_train.sh  launch_training.sh  teardown.sh
tools/bullet/: pawnstar.rs  pawnstar_eval.rs
